# ChangeLog for dev-lang/moarvm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/moarvm/ChangeLog,v 1.23 2015/01/26 03:27:13 patrick Exp $

*moarvm-2015.01 (26 Jan 2015)

  26 Jan 2015; Patrick Lauer <patrick@gentoo.org> +moarvm-2015.01.ebuild:
  Bump

*moarvm-2014.12 (20 Dec 2014)

  20 Dec 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.12.ebuild:
  Bump

*moarvm-2014.11 (23 Nov 2014)

  23 Nov 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.11.ebuild:
  Bump

*moarvm-2014.10 (25 Oct 2014)

  25 Oct 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.10.ebuild:
  Bump

*moarvm-2014.09 (19 Sep 2014)

  19 Sep 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.09.ebuild:
  Bump

*moarvm-2014.08 (25 Aug 2014)

  25 Aug 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.08.ebuild:
  Bump

  21 Jul 2014; Patrick Lauer <patrick@gentoo.org> -moarvm-2013.10.1.ebuild,
  -moarvm-2013.10.ebuild, -moarvm-2014.01.ebuild, -moarvm-2014.02-r1.ebuild,
  -moarvm-2014.02.ebuild, -moarvm-2014.03.ebuild, -moarvm-2014.04.ebuild,
  -moarvm-2014.05.ebuild, -moarvm-2014.06.ebuild:
  Remove old

*moarvm-2014.07 (21 Jul 2014)

  21 Jul 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.07.ebuild:
  Bump

*moarvm-2014.06 (26 Jun 2014)

  26 Jun 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.06.ebuild:
  Bump

*moarvm-2014.05 (26 May 2014)

  26 May 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.05.ebuild:
  Bump

*moarvm-2014.04 (18 Apr 2014)

  18 Apr 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.04.ebuild:
  Bump

  02 Apr 2014; Patrick Lauer <patrick@gentoo.org> moarvm-2013.10.1.ebuild,
  moarvm-2013.10.ebuild, moarvm-2014.01.ebuild, moarvm-2014.02-r1.ebuild,
  moarvm-2014.02.ebuild, moarvm-2014.03.ebuild, moarvm-9999.ebuild:
  Add perl dep #504708

*moarvm-2014.03 (31 Mar 2014)

  31 Mar 2014; Patrick Lauer <patrick@gentoo.org> +moarvm-2014.03.ebuild:
  Bump
