@@ -7,6 +7,7 @@ DIST MoarVM-2014.10.tar.gz 2508468 SHA256 7ba6e115dddce7d867992a8066df164b44ff16
 DIST MoarVM-2014.11.tar.gz 2514421 SHA256 82da8057615c3c7462c62edd26d2b63339b2ef5d776548fe8d7fb8f2c89ac088 SHA512 192742361acfbbc2205285053279ed505955b5ecf764e9306af81bb72ed60a56776a7d57636d562c7c63d49ea2a8b0943db7d97224e21fa333186433f1a14231 WHIRLPOOL 36c483d575ab68c4269a90c8cffc7636ffdb5f81103796fe306b0538f384062d1ff1a53fe55660659878ffd024356ae91fc1ce36251c32bd2cf9bd5b9695fdcd
 DIST MoarVM-2014.12.tar.gz 2516518 SHA256 b94d3d0cdfb19413fbc753d1413bd659a5e5829cdcc88d8b77de00df62c09e5a SHA512 d2ca1162b3440cba8cfd8e47c6b2faa65724c8bc3ef9a33a66d896914261d801857ea321fd36f1aa328bab9787b7d93f410490439df661f926483bfbe5a84c59 WHIRLPOOL cf2d1f104d283c8c704953a70e036e33137f2a5956f5540be6fb2c4d20f4f349dc8f045d67e07d7fd9324c92bd6ccac31349378dbb1d0a71bce8f465ef5d3569
 DIST MoarVM-2015.01.tar.gz 2519960 SHA256 d02d09721bad73b8f2aa460bb731b6c59fb7bd9bf69beb5b80774a3d98065b93 SHA512 d5563272324f04b29fb8cb39d805c080cc7c0c560f9ac85e4150dd864d395b54247cedf750e378209d5a8836d35b2b32ae9083642706aca593c5926072755270 WHIRLPOOL 15f40bb32dab69d50218aab06870044578b6dd1f33b95cc1bbd437e1afd2f2206fc1529de899e5767730d477c9cb170a3a8af88adbd405067f057af80dacb969
+DIST MoarVM-2015.02.tar.gz 3069571 SHA256 4093ff80e6b40f215dd238282a464de59bbd5c2ef42cb9099e9ef68f07fe8d1b SHA512 af93287637d358ee0512a7c5259485dbc6f82fcd7c7e5eb6a8811c6ae6adfd9b3d064f43765f0ba73cd5647f19561f6abd837a273e41ae356e76e56c3bd8e892 WHIRLPOOL 642640572bc0e93afbce6164559ccbb75b6bf84cf086111c4d31b437ef0fc4f49d33dcc23f8a1d5a7ca010ac11dba140a9ba6f37dedf35ea2a1375115a59f189
 EBUILD moarvm-2014.07.ebuild 670 SHA256 5263a226d9bcae5d1c580cf2085a99cb862c6a7f0f1ce7d750e8835b422e9fcc SHA512 b6f25f7dfc84dbb44d8ed9b073e1fd671e8cc8790970ed31fe4318594c4fc8c42668d5fe07c98921e7e55f93a96b9a215a74b220db5efef949faca84826f3060 WHIRLPOOL 45d22a5cada4f27a7fde8078f98def93d8a449faa67d6da6f96b007b9054efda72d63c2722d26e1dd9aded10a39ce562d9f582395636ec13fd0ce1eecce29517
 EBUILD moarvm-2014.08.ebuild 670 SHA256 c5bd3c8ebdb822422af723a8a242f83fc367f6d879428696ea45406b78524622 SHA512 752b839ef48ac26c3a434846c851c649a8047a5cc436a2f8f9e6608b3ac36440d56628ccd337d3d677745a000f060b390cb3946f781cad7da97e76f24c9a6d7c WHIRLPOOL a5787422aefa54b9908c7211ef0e5933d3895479d94695a08891743de9e6d6ca19aae0a9f9e7090d6a3131ea94118d5046c96c16c785c342e0c680300aa77e48
 EBUILD moarvm-2014.09.ebuild 670 SHA256 b63ed4b5a78bdc0e127f0ef331c0d2f70c92cb6841bd78986eed89788fb93149 SHA512 8e8192f32e7f584450101e4f76f0b9bc68c99628eea85bd41b9a160640d653566f1f32cbb4528a6f41581905a47e5f5e204c03311415d228d2787860c5b7505f WHIRLPOOL 71745c549dfd68296eed7a50f6061241395e7067f9869c4e988bc402aa6e1e4c2d72f02b238a280fffa10b2663bad98dd3e01a62f5ccb7f030104e241ddf6074
@@ -14,6 +15,7 @@ EBUILD moarvm-2014.10.ebuild 670 SHA256 0f3abec007580fd155d350df59fdd614f454f23a
 EBUILD moarvm-2014.11.ebuild 670 SHA256 731f84979ff4a93ca2ce51e7617ecbf5e908f51e0eacf07e9cc61ae333d976be SHA512 379290222197d1d6c8c0792d4e8609a67e6afac1bda083678298ec239cb57599ea229e762ff2cf11fd8fad4317e504fb56520f4cd968dc53f9a389d3fc1be1c7 WHIRLPOOL 1f811e886e48a1eb241e427ef5cb8fd3ad57ec916a4d59161b6283c55faf534c90c41f70c5ac6222a0851c99920b9c02a6c8d63d845c2afd091d7e003acf7ebf
 EBUILD moarvm-2014.12.ebuild 670 SHA256 95d394884547da3493a5e7867e4a5fe83dbbfdcb575621b5483fb05af44f6f5b SHA512 3f1162fbb84818b1fa787e04f2cac5aa5fe75f4b99d0b4c4262bdce0879f6b4a8ccdc7c2e9b86b0a308fc1556d934d7099dc5f42b20c7c35a2518894aaebc319 WHIRLPOOL 555a8f7cc933163c4bc2af2704e53067b4200fb43944be444d1fa5a9e991cc984467e932a7dc5682e83d092bb2f9f238ef6308724ea38732bdd4bf2baed08e46
 EBUILD moarvm-2015.01.ebuild 670 SHA256 54e3a8ece40d5a7ab6e61bf395b7eeb71b21b42de89180bd23e9964b78dbfda7 SHA512 ecef057b2d7741aeb4461ae4b98139cc0e380b30103b6730a4446fc21be3c6ebcf2f1036c7e80f116b8ea2e9caa4ab563cb6014260ee44dedada0cedbd958aaf WHIRLPOOL 2e8232b2fb8d358816c19f2902415ed45a789839562ecf4e0fba9388349eae2d79e849a9992ac4b09484eb9f1df0f5b21313d617ef50b8c9db8e0ceeb42eb059
+EBUILD moarvm-2015.02.ebuild 670 SHA256 e08d879f2e247f0ca901c4fae091853ad704d88f954b53355c42839533dcf896 SHA512 ea64b7178c1e2fc27bcf0ce75d71714bd3ea3764e79668af3baafac2243af0bd2db7d28f3f0983dd8f26622477222b17d822a6eeb414927e64e6f23bd6a9ab96 WHIRLPOOL 1d2c1564d9da11dce50125d831af212cc18b62fd053f4abe0743c1fc21134e096975ce9e2b19a5b53047df5747139d6e80bc170f00ed9053565c1f991f3ac27f
 EBUILD moarvm-9999.ebuild 776 SHA256 f259922459ae0efee68ae51cb5633931603dc8b5e0aa43a584be77d99e1b28e0 SHA512 17f335e88cd59a7f0a0c8933035bc076fdd7524fa110de9ddd8389674e332b07b9118268bbb6ca44e32a2eabcd2867fedf4bc4e16b09d715632aebec83763697 WHIRLPOOL a9f049db54b43e2ea5a8b176bab0f1113190695041d7562ddbb4873f5daf919a52678ebcf4ffb840d79df3a91e4146b2450dd40728da0c678de9be070a514c56
-MISC ChangeLog 3394 SHA256 bd5a87931cec0e3bfa9565a76a91b83e8a7942265550a977895573a71adaa5b9 SHA512 aa29db4499aa128e84bf52f49748f43639733be529647fe92275e57201ddf52d2d2fd83aaeba25c77b8eabc7e6c2a1e007594366a97e37dd80531616573eaa29 WHIRLPOOL 86c108bddbd1d2aabeab0727ed15b7ae150424096cf8aaaa9356d07d86c760a67d9c869a6b680c15b6cb6ffda80dcfb179f4ae38dff50ba1c907827b679b1a2a
+MISC ChangeLog 3507 SHA256 f730847f8e31f4273709897407d06cb1fc71ba56c208f573405032b3491a0e99 SHA512 561352fcda1db18652ec2e64971c0460145ed5f2641b53e35ff0eaa4b24c7b840548114d83d3f22818e6a175403ce77c754ce63b7773963f8105c0018e2c60fe WHIRLPOOL 97ad73c73d307e5866eca633ac0e30530e4bcbca1b458f4988f7ab838e8149870541ed2578708d92ef6f6a70531d778fd9b8945f7242c53db82b842291d60756
 MISC metadata.xml 252 SHA256 2d53d1d9369e88cc0380590dbb20a2e458cb651a0aa935e4b102bd465d54c524 SHA512 8ecd246342fe3cf2de1b70713979bf7f2f912a8b0780706b0cce32247395ee9d70789c891d7a600f32adaaadfa29df7e002691b5606a2b6b156583c9cc422acf WHIRLPOOL ba28e2c4294e84421a4e5028ba2dafe0004b207ef8d2c4094b70516f82a1846c7fbd4f8dba38cfb91b36e2109eef54641596cf24d182809900d7cff8da6a0aad
