@@ -5,25 +5,23 @@ AUX libX11-1.1.4-aix-pthread.patch 300 SHA256 4b7fcb715a3a7568b8febeac29cfb32674
 AUX libX11-1.1.5-solaris.patch 246 SHA256 89210b0559e936cdb0a42b9bc5df9bf47704b88b53d93d329b372ca855cddd0c SHA512 8f6faa51f5d3cb25f32c9a3ac6ce96140748836cc5d101b5a1202d6d68d45d10401d7a4e45bfc11b9e71872acc96616b180795a7a617491058e1d856e7762878 WHIRLPOOL d4ef7620161fe18063854e0fc122730871ec9025cf15bb44463b5e701c8e3ef513a6017b961f80b61cff74cb04aadc55edb432db654ab649721a0e542da005e8
 AUX libX11-1.1.5-winnt-private.patch 420 SHA256 d0349ef4d379ab3eefa33a28d20e0ec9c630ab0b5c64a52c3849cc8d1d4abba0 SHA512 71f036f88ab45286826bde20fafaa1eea86aade16d21601e4da0ed935e2a937c6570969e3b173967e1860778c594b0ea08eb905e7c47b67e147d65834905c251 WHIRLPOOL d72c7b3cf0ea7202c0aa1aae3d30c5c453dbeafc8b6d8ccb8aa993da41ea1863edae8ed27a4bcdb8e02335c9083e5bce8842ae5018bbb9f23eb6fe8057e5e16f
 DIST libX11-1.6.2.tar.bz2 2339981 SHA256 2aa027e837231d2eeea90f3a4afe19948a6eb4c8b2bec0241eba7dbc8106bd16 SHA512 c8609ff34d1fe71f35b35e0273a872ccded4d824c8afdcca37e1779d37bf667cb814e0ead0805668b4222f196148476f283e417ba371b722f1fe716a5bbba20b WHIRLPOOL 1e6e5010725586557912ab51aa07c41a6297e26f3818e31cf62d455735f4a4f29c0bd13140964ffb1290588ccb8e1643217bca685aa2e7ec40d99b907541656c
-EBUILD libX11-1.6.2.ebuild 1726 SHA256 59fc1a085c176301a51f142a7f37040e47e7fac2f74fb046b5d1d3f046ad9151 SHA512 310c4f4793358b834a5542dbdea2ee4674ee276c63f0936d5437334cf2e9deaf0ffdfac775847cd43831cba6502b8318ba066970cd85d900147144bd15ce1907 WHIRLPOOL f1916c3dda722533022482090a4831cae6c8b38570d7cfb02aace5974a60da63c4d4c724323fa006bfdebebf76608374d9c9b449bb839f3a5a0031bf83c933c5
-MISC ChangeLog 29237 SHA256 d2c59ef1b2fcb8f36601618078571ba0916d695a21b36fe747e547d70ed88cc2 SHA512 b615ca9c00492c6d9eb8f0aa579459f8adce10aa4bd4190242d95f1268201b8849acd82b2e7a1ad96eb4790dd3d6da260998dbb01aa7d6404b1beb21ab67097e WHIRLPOOL cbc17879d6050672287d67a2b433cf89d68b59b86d3743d4634fdf33f4d89569875fca7f1605a65c0941df873d3a71df2bd232e7d5676de9dffe9ceb9d034457
+EBUILD libX11-1.6.2.ebuild 1728 SHA256 0a35fc9162425e21bf79ffe4ac32359fdebb8cfe91a94fb314cd4137995217d2 SHA512 489932b397431f5a12dfac0a4ed8128989d2842a403946272b8f8eb38f9e779a9a9427d644c1a22c973507a2a67e30456ddef3a364b4a4f25cd4f2c38434ad51 WHIRLPOOL 79247b74aa98d2a37da508d365f3923117d6f648a3d46f3bcc6c7e9263cec92112f32baca0c220fcc2b0d789ce3898c75f5e8f54ad09564ea3ea72fffb013c1f
+MISC ChangeLog 29348 SHA256 06c9a1ce092b415b2ce51593d29a8717301451bd114123775020eefcf0809feb SHA512 8e8d7efb621152de3e287add0286146d5b788f85a3e1890383c4fdbea03b049b0797005bbe8f0f94dbf66d2b3f222c1325a97ba1733bc902a8c672a5a0eb3d07 WHIRLPOOL 0043ebe291cdda3779d8c685ccc28a6eb601b0342a5e3dab474b9c300d078536e527387e133d74cbc95a3969fabecbfda089e9f28fd3e83f3a9fdb8e13202f3e
 MISC metadata.xml 235 SHA256 a202310d22801d09c363b58972e7d8101369192bb97b063bc1a3c7b7ef0e79c6 SHA512 f0f79bbc5200a007cad2a1ba783b5776b2eee19579daaac83546731ab3377e11d4d5546f91b35cf6f4331927ba9cf2d4f95e254736259145f38b84d2f9cc43aa WHIRLPOOL 1978b61b9ad4838ef7838ca760b612c79219acf8c52702e1c168d28ef52f799f710b6a1644031caa6b19f54f4857dc5fe7e3963df020fe688e0de7c5d5a07e08
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTof7sXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOv/0QANPVl5sm4Do7NT2B2VQVaJlS
-z0OlCjO9x9FERJDOezJQUy7naupzu/1A7Liji5JNWNAAC2ad4sdv0RteC4ckJFoU
-23bINNmK1hfcWfUnSNb5+ZNdxL9yDF353T8dO4tEnzuPDuB9bplu4HZIWJfFISht
-V9XbwwVZe/8LcMKtrlGyfCxzh83l7EI0nf5hFhT0Uj5nMuVoE1dbtQTs40X1Cfbz
-g6jUitMWqZfe6we4fx59uE+xjemhWXP3KLRnnh2k330ULXgekZd02dOVVSPr9DCg
-tf2eG+N0pnZECGYIva2sIcoa4NXKdeiU3fixS2X8KbOap8YW2o44tn4zW3kKkfKM
-NN0l3f33v+4uNxSwwaeeUeqwDAKV7U+xzno9XC3YdVFiahFE7miWwBdfG6FeKxY5
-dq2Hy7JW0jtBo+Pg+97ZDQDeoMvggSSlAC/s61cggw8GJmEnnhAWPBoo596ab8x2
-DlBLeXKIYVMraG3HvA/tz3tON89oFMyb+0xNIRxiren4ttq7vO8QeafectTRknu0
-K9gQR+BMUYV5QFx+0KBGEzX5jXuPbNjRgT9hEikCrGWz7A1hK5MZzW419jT1+uNK
-K+ygGzsH8ns5BYdIgV3oVRl5VQCpeM+mMfsDgCVlle6WLlv83YkUEdYKto9Y71YZ
-EJC+JxNDhpWQGZVf1bmB
-=jPu9
+iQIcBAEBCAAGBQJU6T0lAAoJEA/daC2XTKcqI/gP/i8RWeDKyYPD241kcGpYA3He
+Yrwsq80DWL8g+ZUro0XMSb9OAUwBM/bFlmHze9ZVFJETVMK+1tpecNMK6EtBjxDs
+BE83AaAS5tXbqpoJ/Mck+UHeBfYxRtu+VJp1ajPhxJVfIv7UwMY13qXhcklGnVgl
+bRTU82WBYJqvgiB1qD1vtuqukh5q3cF2mRy2T+GA+ctWLDWE7tClHo+bpBViwMqu
+e33cJf4glwbxFw/SMtMboK/3JA154wpsBdOc96vA4TQ+5K6Oln67LND2E2ZyvVat
+Z5otzdKFEj4ec/gQNe9X80Sdqyf7JZSWuP4iz0dT0ILJFCrRwi8Ki3AC3lmBvvT3
+hia3GLneSaTrYgoXPlY82moyXSESMVOWVKOyMbo0h0Ssj0wmhaDK5wQ1FipIg32w
+LVM99IGGp/m0+ZnKOuLWFgro/CgZEE67yBE39OF/2vCPJL9UkYLWvYwJv0qpTxZF
+PRvpf44+adsUgyHxaj/6wvg+1A4retzoHPC2oJhIBmqImGdRC27zTvzxz098dzSh
+Dtbr9M/LGq3jEhhyb0zuaHKf+/GvHGdbyWtrWHUV/D2p+7dM5XEGL90Bh+U67E35
+ReO5mXTJD2t5BWIP0JupMtJbfntK4HoPZzR7EXCLRR4++Kdbn/tIxEohSmcTTIMS
+q4wBKRvZxPN/fV6voPlM
+=FV5s
 -----END PGP SIGNATURE-----
