@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/moarvm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/moarvm/ChangeLog,v 1.23 2015/01/26 03:27:13 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/moarvm/ChangeLog,v 1.24 2015/02/22 02:16:28 patrick Exp $
+
+*moarvm-2015.02 (22 Feb 2015)
+
+  22 Feb 2015; Patrick Lauer <patrick@gentoo.org> +moarvm-2015.02.ebuild:
+  Bump
 
 *moarvm-2015.01 (26 Jan 2015)
 
